// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty.css - css-verify: empty.css 1`] = `
---
---

a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
---

a {
  color: red;
}

`;

exports[`empty_newlines.css - css-verify: empty_newlines.css 1`] = `
---



---



a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---



---

a {
  color: red;
}

`;

exports[`malformed.css - css-verify: malformed.css 1`] = `
---
aaa
b---

a {
    color: red;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
--- aaa b--- a {
  color: red;
}

`;

exports[`malformed-2.css - css-verify: malformed-2.css 1`] = `
---
foo: bar
---

a {
color:blue
}

---

.b {
color:red
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
foo: bar
---

a {
  color: blue;
}
--- .b {
  color: red;
}

`;

exports[`only_comments.css - css-verify: only_comments.css 1`] = `
---
# comment 1
# comment 2
# comment 3
---

a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
# comment 1
# comment 2
# comment 3
---

a {
  color: red;
}

`;

exports[`with_comments.css - css-verify: with_comments.css 1`] = `
---
title: Title
description: Description
# This is a comment
---

a {
    color: red;
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
# This is a comment
---

a {
  color: red;
}

`;

exports[`yaml.css - css-verify: yaml.css 1`] = `
---
title: Title
description: Description
---

a {
    color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;

exports[`yaml.less - css-verify: yaml.less 1`] = `
---
title: Title
description: Description
---

a {
  color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;

exports[`yaml.scss - css-verify: yaml.scss 1`] = `
---
title: Title
description: Description
---

a {
  color: red;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---
title: Title
description: Description
---

a {
  color: red;
}

`;
